feat(type): add goods type
